# CProjekt

./: .gitignore  CMakeLists.txt  Makefile  README.md  library.c  library.h  myfind  myfind.c  myfind.h  queue.c  queue.h  search.c  search.h  test_library.c
test_dir/dir/dir2/dir3/: findme.txt
